# Burning-Windows

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  aur.sh  checksum-helper.sh  install.sh  rescue-remisa.sh  uninstall.sh
package/: metadata.json
package/contents/code/: main.js
package/contents/shaders/: burn.frag  burn_core.frag
packaging/: PKGBUILD.template
src/: CMakeLists.txt  main.cpp  metadata.json  remisaburn.cpp  remisaburn.h
src/kpackage/burning_windows/: metadata.json
src/kpackage/burning_windows/contents/ui/: main.qml
tests/: validate.sh
